<resources>
    <string name="app_name">HeAPS Line-Listing</string>
    <string name="btnDownload" translatable="false">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="promptemail">Email</string>
    <string name="promptpassword">Password</string>
    <string name="actionsignin">Login</string>
    <string name="actionsigninshort">Sign in</string>
    <string name="splashText"> </string>
    <string name="checkpendingforms">CHECK PENDING FORMS</string>
    <string name="startinterview" translatable="false">START INTERVIEW</string>
    <string name="openHouseholdForm" translatable="false">OPEN HOUSEHOLD FORM</string>
    <string name="addChild" translatable="false">ADD A CHILD</string>
    <string name="openbloodform" translatable="false">UPDATE BLOOD INFORMANTION</string>
    <string name="openstoolform" translatable="false">UPDATE STOOL INFORMANTION</string>
    <string name="recordssummary">Records Summary</string>
    <string name="mainmenu">Main Menu</string>
    <string name="onlyfortesting">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="district">DISTRICT</string>
    <string name="uc" translatable="false">UC</string>
    <string name="btnSave" translatable="false">Save</string>
    <string name="btnEnd" translatable="false">Cancel</string>
    <string name="signin" translatable="false">SIGN IN</string>
    <string name="signin_msg">Enter your usename and password to access the app.</string>
    <string name="username" translatable="false">Username</string>
    <string name="password" translatable="false">Password</string>
    <string name="newPassword" translatable="false">New Password</string>
    <string name="confirmPassword" translatable="false">Confirm Password</string>
    <string name="btnResetPassword">Reset Password</string>
    <string name="country">Language (Click to change)</string>
    <string name="pakistan" translatable="false">Pakistan</string>
    <string name="tajikistan" translatable="false">Tajikistan</string>
    <string name="btnLogin" translatable="false">Login</string>
    <string name="btnReset" translatable="false">Reset</string>
    <string name="btnDownloadData" translatable="false">Download Data</string>
    <string name="csMAexist" translatable="false">might be already exist</string>
    <string name="netwrok" translatable="false">Network connection not available!</string>
    <string name="invalidpass" translatable="false">Invalid Password</string>
    <string name="unameRequired" translatable="false">Username is required.</string>
    <string name="incorrcetPass" translatable="false">Incorrect Password</string>
    <string name="downData" translatable="false">Download Data</string>
    <string name="permission" translatable="false">Permissions Required</string>
    <string name="warning" translatable="false">Warning</string>
    <string name="newApp" translatable="false">New App downloaded!!</string>
    <string name="appVer" translatable="false">App New Version</string>
    <string name="btnSync">Download Data</string>
    <string name="downloaded" translatable="false">Downloaded</string>
    <string name="appDownload" translatable="false">appDownload</string>
    <string name="newVer" translatable="false">New Version</string>
    <string name="downloading" translatable="false">Downloading</string>
    <string name="available" translatable="false">Available</string>
    <string name="downError" translatable="false">Cant download.. Internet connectivity issue!</string>
    <string name="backbtn" translatable="false">Press Back again to Exit</string>
    <string name="noNetwork" translatable="false">No network connection available!</string>
    <string name="appAvailable" translatable="false">APP is available!</string>
    <string name="oldAppMsg" translatable="false">App Ver." + " is now available. Your are currently using older Ver."</string>
    <string name="installNewApp" translatable="false">Install new version to use this app</string>
    <string name="install" translatable="false">Install</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="complete" translatable="false">complete</string>
    <string name="updatingError" translatable="false">Error in updating db!!</string>
    <string name="updateDbError1" translatable="false">"Sorry. You can\'t go further."</string>
    <string name="updateDbError2" translatable="false">"Please contact IT Team (Failed to update DB)"</string>
    <string name="bckbtn" translatable="false">You Cant go back</string>
    <string name="processing" translatable="false">Processing</string>
    <string name="confirmation" translatable="false">Confirmation!</string>
    <string name="confirm">Confirm?</string>
    <string name="cntbtn" translatable="false">Are you sure, you want to continue - interview</string>
    <string name="failedUpdateDb" translatable="false">SORRY! Failed to update DB</string>
    <string name="invalidDate" translatable="false">Invalid date!</string>
    <string name="ageCalc" translatable="false">"Both Month and Year don\'t be zero!!"</string>
    <string name="actiondatabase" translatable="false">Database Manager</string>
    <string name="actionCheckWorker" translatable="false">Check Worker Status</string>
    <string name="actiondatasync" translatable="false">Sync Data</string>
    <string name="dkn"> Don’t Know </string>
    <string name="none"> No one </string>
    <string name="never"> Never</string>
    <string name="na"> Applicable /Not Available</string>
    <string name="nap"> Not Applicable </string>
    <string name="errorinvalidpassword">This password is too short</string>
    <string name="errorfieldrequired">This field is required</string>
    <string name="errorincorrectpassword">This password is incorrect</string>
    <string name="nav">Not Available </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Please explain </string>
    <string name="year"> Year </string>
    <string name="month"> Month </string>
    <string name="weeks"> Week(s) </string>
    <string name="days"> Day(s) </string>
    <string name="hours"> Hour(s) </string>
    <string name="minutes"> Minute(s) </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> cm </string>
    <string name="in"> Inch </string>
    <string name="rupees"> Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="upd_db_form" translatable="false"> updateDB(Form):\t </string>
    <string name="upd_db_error" translatable="false"> Updating Database… ERROR! </string>
    <string name="db_excp_error" translatable="false"> Database Exception... ERROR! </string>
    <string name="upd_db" translatable="false"> Updating Database...\t </string>
    <string name="fail_db_upd" translatable="false"> Failed to Update Database! </string>
    <string name="backPress" translatable="false"> Back Press Not Allowed </string>
    <string name="invalid_response" translatable="false"> Invalid Response </string>
    <string name="agecal" translatable="false">ageCal:\t</string>
    <string name="title_child_dialog" translatable="false">Child Count</string>
    <string name="message_child_dialog_proceeed" translatable="false">You have entered only %1$s of %2$s Children in the household. \nAre you sure you want to continue now?</string>
    <string name="message_child_dialog_addmore" translatable="false">You have already entered %1$s Children. \nAre you sure you want to add more Child?</string>
    <string name="network_conn_error" translatable="false"> Network connection not available ! </string>
    <string name="no_mother_selected_child_list" translatable="false"> No Mother has been selected. Please select a mother before opening Child List </string>
    <string name="onitemselected" translatable="false"> onItemSelected(Samples):\t </string>
    <string name="upd_samples" translatable="false"> updateDB(Samples):\t </string>
    <string name="upd_anthro" translatable="false"> updateDB(Anthro):\t </string>
    <string name="folder_not_created" translatable="false"> Folder Not Created </string>
    <string name="invalid_password" translatable="false"> Invalid Password </string>
    <string name="username_required" translatable="false"> Username is required. </string>
    <string name="username_password_same" translatable="false"> Username and Password cannot be same. </string>
    <string name="incorrect_username_or_password" translatable="false">Incorrect Username or Password</string>
    <string name="open_hh_form" translatable="false"> Open Household Form </string>
    <string name="hh_not_found" translatable="false">Household not Found</string>
    <string name="hh_exists_form" translatable="false"> JSONException(Form): \t </string>
    <string name="child_info_missing" translatable="false">Please fill child sections before entering this information</string>
    <string name="open_new_form" translatable="false">OPEN NEW FORM</string>
    <string name="options" translatable="false">Options</string>
    <string name="householdidentificationmainheading">Household Identification: </string>
    <string name="add_street">ADD STREET</string>
    <string name="street_table_title">(Street Table)</string>
    <string name="serial_no">Serial No.</string>
    <string name="questions">Questions</string>
    <string name="answer">Answer</string>
    <string name="remarks">Remarks</string>
    <string name="bl01">District</string>
    <string name="bl0101">Karachi</string>
    <string name="bl0102">Matiari</string>
    <string name="bl02">Area</string>
    <string name="bl0201">Dhobi Guard</string>
    <string name="bl0202">Ghahela</string>
    <string name="bl03">Cluster Code</string>
    <string name="st01">Street Name</string>
    <string name="st02">Street Number</string>
    <string name="st03">Street Description</string>
    <string name="st0301">Narrow</string>
    <string name="st0302">Congested</string>
    <string name="st0303">Connecting</string>
    <string name="st0304">Wide</string>
    <string name="st0305">One Way</string>
    <string name="st0306">Two Way</string>
    <string name="st0307">Other/Unknown</string>
    <string name="st04">Street Orientation</string>
    <string name="st0401">North</string>
    <string name="st0402">15° From North</string>
    <string name="st0403">30° From North</string>
    <string name="st0404">45° From North</string>
    <string name="st0405">60° From North</string>
    <string name="st0406">75° From North</string>
    <string name="st0407">90° From North (East - West)</string>
    <string name="st0408">Minus 15° From North</string>
    <string name="st0409">Minus 30° From North</string>
    <string name="st0410">Minus 45° From North</string>
    <string name="st0411">Minus 60° From North</string>
    <string name="st0412">Minus 75° From North</string>
    <string name="st0413">Mixed</string>
    <string name="st05">Estimated Urban Canyon Height (m)</string>
    <string name="st06">Estimate Urban Canyon Width (m)</string>
    <string name="st07">Street Floor Surface</string>
    <string name="st0701">Concrete</string>
    <string name="st0702">Unpaved compacted</string>
    <string name="st0703">Brick paviers</string>
    <string name="st0704">Asphalt</string>
    <string name="st0705">Cobblestone</string>
    <string name="st0706">Gravel</string>
    <string name="st0707">Dirt</string>
    <string name="st0708">Interlocking tiles</string>
    <string name="st08">ST08 Planting</string>
    <string name="Q_bl04">BL04</string>
    <string name="bl04">Is this the first tablet being used for the line listing of this PSU?</string>
    <string name="bl0401">Yes (Tablet A)</string>
    <string name="bl0402">No (Tablet B)</string>
</resources>